--- a/website/plasma-b2c-docs/docs/components/Loader.mdx
+++ b/website/plasma-b2c-docs/docs/components/Loader.mdx
@@ -88,73 +88,40 @@ export function App() {
 }
 ```
 
-### Размытие фона
-Добавление эффекта размытия фона с разной интенсивностью:
+### Полупрозрачный оверлей с размытием
+Отображение индикатора поверх затемненного фона с blur эффектом:
 
 ```tsx live
-import React from 'react';
-import { Loader } from '@salutejs/plasma-b2c';
-
-export function App() {
-    return (
-        <div style={{ display: 'flex', alignItems: 'center', gap: '1rem', flexWrap: 'wrap' }}>
-            <Loader type="spinner" hasBlur blur="small" />
-            <Loader type="spinner" hasBlur blur="medium" />
-            <Loader type="spinner" hasBlur blur="large" />
-
-            <Loader type="progress" hasBlur blur="medium" value={50} />
-        </div>
-    );
-}
-```
-
-### Полупрозрачный оверлей
-Отображение индикатора поверх затемненного фона:
-
-```tsx live
-import React from 'react';
-import { Loader } from '@salutejs/plasma-b2c';
-
-export function App() {
-    return (
-        <div style={{ position: 'relative', height: '200px', border: '1px solid #ccc' }}>
-            <Loader
-                type="spinner"
-                hasOverlay
-                style={{ position: 'absolute', inset: 0 }}
-            />
-        </div>
-    );
-}
-```
-
-### Использование с PopupBaseProvider
-Для корректной работы Loader с оверлеем необходимо обернуть приложение в `PopupBaseProvider`:
-
-```tsx live
-import React, { useState } from 'react';
-import { Loader, Button, PopupBaseProvider } from '@salutejs/plasma-b2c';
+import React, { useState, useEffect } from 'react';
+import { Loader, Button } from '@salutejs/plasma-b2c';
 
 export function App() {
     const [loading, setLoading] = useState(false);
 
     const handleShowLoader = () => {
         setLoading(true);
-        setTimeout(() => setLoading(false), 3000);
     };
 
+    useEffect(() => {
+        if (loading) {
+            const timer = setTimeout(() => {
+                setLoading(false);
+            }, 5000);
+            return () => clearTimeout(timer);
+        }
+    }, [loading]);
+
     return (
-        <PopupBaseProvider>
-            <div style={{ position: 'relative', padding: '1rem' }}>
-                <Button onClick={handleShowLoader}>Показать загрузку</Button>
-                {loading && (
-                    <Loader
-                        type="spinner"
-                        hasOverlay
-                    />
-                )}
-            </div>
-        </PopupBaseProvider>
+        <div style={{ position: 'relative', height: '200px' }}>
+            <Button onClick={handleShowLoader}>Показать загрузку</Button>
+            {loading && (
+                <Loader
+                    type="spinner"
+                    hasOverlay
+                    withBlur
+                />
+            )}
+        </div>
     );
 }
 ```
