--- a/website/sdds-insol-docs/docs/components/Range.mdx
+++ b/website/sdds-insol-docs/docs/components/Range.mdx
@@ -68,46 +68,88 @@ import TabItem from '@theme/TabItem';
 
 ### Управление внешним видом
 
-Внешний вид компонента зависит от свойства`size`:
-```tsx live
-import React from 'react';
-import { Range } from '@salutejs/sdds-netology';
+Внешний вид компонента зависит от свойств `appearance`, `size`:
 
-export function App() {
-    return (
-        <div style={{ display: 'flex', flexDirection: 'column', gap: '2rem' }}>
-            <Range
-                size="l"
-                label="Size l"
-                firstPlaceholder="От"
-                secondPlaceholder="До"
-                dividerVariant="dash"
-            />
-            <Range
-                size="m"
-                label="Size m"
-                firstPlaceholder="От"
-                secondPlaceholder="До"
-                dividerVariant="dash"
-            />
-            <Range
-                size="s"
-                label="Size s"
-                firstPlaceholder="От"
-                secondPlaceholder="До"
-                dividerVariant="dash"
-            />
-            <Range
-                size="xs"
-                label="Size xs"
-                firstPlaceholder="От"
-                secondPlaceholder="До"
-                dividerVariant="dash"
-            />
-        </div>
-    );
-}
-```
+<Tabs>
+    <TabItem value="appearance" label="Appearance" default>
+        Для `appearance="clear"` есть возможность отобразить разделитель с помощью `hasClearDivider`
+
+        ```tsx live
+        import React from 'react';
+        import { Range } from '@salutejs/sdds-dfa';
+
+        export function App() {
+            return (
+                <div style={{ display: 'flex', gap: '3rem', flexWrap: 'wrap' }}>
+                    <Range
+                        appearance="default"
+                        label="Appearance default"
+                        firstPlaceholder="От"
+                        secondPlaceholder="До"
+                        dividerVariant="dash"
+                    />
+                    <Range
+                        appearance="clear"
+                        label="Appearance clear"
+                        firstPlaceholder="От"
+                        secondPlaceholder="До"
+                        dividerVariant="dash"
+                    />
+                    <Range
+                        appearance="clear"
+                        hasClearDivider
+                        label="Appearance clear с разделителем"
+                        firstPlaceholder="От"
+                        secondPlaceholder="До"
+                        dividerVariant="dash"
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+    <TabItem value="size" label="Size">
+        ```tsx live
+        import React from 'react';
+        import { Range } from '@salutejs/sdds-dfa';
+
+        export function App() {
+            return (
+                <div style={{ display: 'flex', flexDirection: 'column', gap: '2rem' }}>
+                    <Range
+                        size="l"
+                        label="Size l"
+                        firstPlaceholder="От"
+                        secondPlaceholder="До"
+                        dividerVariant="dash"
+                    />
+                    <Range
+                        size="m"
+                        label="Size m"
+                        firstPlaceholder="От"
+                        secondPlaceholder="До"
+                        dividerVariant="dash"
+                    />
+                    <Range
+                        size="s"
+                        label="Size s"
+                        firstPlaceholder="От"
+                        secondPlaceholder="До"
+                        dividerVariant="dash"
+                    />
+                    <Range
+                        size="xs"
+                        label="Size xs"
+                        firstPlaceholder="От"
+                        secondPlaceholder="До"
+                        dividerVariant="dash"
+                    />
+                </div>
+            );
+        }
+        ```
+    </TabItem>
+</Tabs>
 
 ### Варианты разделителя
 
