feat(*): add Tooltip component as _beta

--- a/website/sdds-finai-docs/docs/beta/Popover.mdx
+++ b/website/sdds-finai-docs/docs/beta/Popover.mdx
@@ -39,7 +39,7 @@ export function App() {
 
 ## Взаимодействие с компонентом
 Свойство `target` имеет тип `ReactElement`. Это цель для взаимодействия с всплывающим окном.
-Содержимое самого окна нужно класть в `children`. Также все содержимое `children` уже обернуто во `ViewContainer` внутри самого компонента.
+Содержимое самого окна нужно класть в `children`.
 
 ## Примеры
 <Tabs>
