feat: Add docs for `h6` component in typography

--- a/website/sdds-netology-docs/docs/components/Typography.mdx
+++ b/website/sdds-netology-docs/docs/components/Typography.mdx
@@ -77,7 +77,7 @@ export function App() {
 
 ```tsx live
 import React from 'react';
-import { H1, H2, H3, H4, H5 } from '@salutejs/sdds-netology';
+import { H1, H2, H3, H4, H5, H6 } from '@salutejs/sdds-netology';
 
 export function App() {
     return (
@@ -101,6 +101,10 @@ export function App() {
             <H5 bold={false}>H5</H5>
             <H5>H5 Bold</H5>
             <H5 medium>H5 Medium</H5>
+
+            <H6 bold={false}>H6</H6>
+            <H6>H6 Bold</H6>
+            <H6 medium>H6 Medium</H6>
         </div>
     );
 }
